# aicup2020

./: .gitignore  CMakeLists.txt  MyStrategy.cpp  MyStrategy.hpp  README.md  batch_run.py  deploy.sh  plot.py  run.py
model/: Action.cpp  AttackAction.cpp  AttackAction.hpp  Entity.hpp  EntityAction.cpp  EntityAction.hpp  PlayerView.cpp  PlayerView.hpp  Vec2Int.cpp  Vec2Int.hpp
